[package]
name = "viaduct"
version = "0.3.0"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
repository = "https://github.com/WilliamVenner/viaduct"
description = "A duplex communication channel between a parent and child process, using unnamed pipes"
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "memory-management"]
keywords = ["pipes", "ipc", "multiprocessing", "duplex"]

[profile.ci-test]
inherits = "dev"
opt-level = 0
lto = true
overflow-checks = true
debug-assertions = true

[workspace]
members = ["test"]

[features]
default = []
speedy = ["dep:speedy"]
bincode = ["dep:bincode", "dep:serde"]

[dependencies]
interprocess = { version = "1", default-features = false }
oneshot = "0"
crossbeam-channel = "0"
parking_lot = "0"
serde = { version = "1", optional = true }
bincode = { version = "1", optional = true }
speedy = { version = "0.8", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }