[package]
name = "viaduct"
version = "0.4.0"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
repository = "https://github.com/WilliamVenner/viaduct"
description = "A duplex communication channel between a parent and child process, using unnamed pipes"
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "memory-management"]
keywords = ["pipes", "ipc", "multiprocessing", "duplex"]

[profile.ci-test]
inherits = "dev"
opt-level = 0
lto = true
overflow-checks = true
debug-assertions = true

[features]
default = ["bytemuck"]
bytemuck = ["dep:bytemuck"]
speedy = ["dep:speedy"]
bincode = ["dep:bincode", "dep:serde"]

[dependencies]
interprocess = { version = "1", default-features = false }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", optional = true }
bincode = { version = "1", optional = true }
speedy = { version = "0.8", optional = true }
bytemuck = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.39", features = ["Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"