[package]
name = "viaduct-test"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
speedy = ["dep:speedy", "viaduct/speedy"]
bincode = ["dep:bincode", "dep:serde", "viaduct/bincode"]

[dependencies]
viaduct = { path = "../", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "1", optional = true }
speedy = { version = "0.8", optional = true }